# OpenXR-SDK-Source

./: .appveyor.yml  .editorconfig  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .proclamation.json  .proclamation.json.license  BUILDING.md  CHANGELOG.SDK.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CODE_OF_CONDUCT.md  README.md  build.gradle  checkCodespell  file_format.sh  open-in-docker.sh  openxr-codespell.exclude  runClangFormat.sh  tox.ini  use_gles_on_quest.bat  use_vulkan_on_quest.bat
.azure-pipelines/: build_jobs.yml  build_linux.yml  build_mingw.yml  build_msvc.yml  check_clang_format.yml  check_file_format.yml  codespell.yml  generate_windows_matrix_build.py  openxr-sdk-source.yml  openxr-sdk.yml  organize_windows_artifacts.py  print_windows_artifact_names.py  shared.py
.github/: dependabot.yml
.reuse/: dep5
LICENSES/: LicenseRef-KhronosSpecCopyright-WithNormativeWording-v10.txt
changes/: .markdownlint.yaml  README.md  template.md
impl/: CMakeLists.txt  nanoseconds.cpp  nanoseconds.h  openxr_sample_impl.cpp  openxr_sample_impl.h  si_dev_opengl.cpp  si_dev_opengl.h  si_display_timing.cpp  si_display_timing.h  si_linear.h
include/: CMakeLists.txt  generated_header_list.txt.license
loader/: CMakeLists.txt  loader_platform.hpp
maintainer-scripts/: archive-sdk.sh  build-aar-layer.sh  build-aar.sh  build-and-publish-aar-mavencentral.sh  build-and-publish-aar-snapshot.sh  check-changelog-fragments.sh  common.sh
src/api_layers/: AndroidManifest.xml.in  CMakeLists.txt  OpenXR_API_Dump.png.license  OpenXR_Core_Validation.png.license  README.md  README_api_dump.md  README_core_validation.md  XrApiLayer_api_dump.def  XrApiLayer_api_dump.expsym  XrApiLayer_api_dump.map  XrApiLayer_core_validation.def  XrApiLayer_core_validation.map  api_dump.cpp  api_layer_platform_defines.h  apilayer_api_dump.pom  apilayer_core_validation.pom  core_validation.cpp  core_validation_html_anchor.png.license  core_validation_message.svg.license  validation_utils.h
src/api_layers/best_practices/: CMakeLists.txt  XrApiLayer_best_practices_validation.def  XrApiLayer_best_practices_validation.expsym  apilayer_best_practices_validation.pom  best_practices_validation.cpp  layer_utils.cpp  layer_utils.h
src/tests/: CMakeLists.txt
src/tests/c_compile_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle  main.c  settings.gradle
src/tests/hello_xr/: AndroidManifest.xml  CMakeLists.txt  build.gradle  check.h  common.h  d3d12_utils.cpp  d3d12_utils.h  d3d_common.cpp  d3d_common.h  geometry.h  gradle.properties  gradlew  gradlew.bat  gradlew.license  graphics_plugin_impl_helpers.h  graphicsapi.h  graphicsplugin.h  graphicsplugin_d3d11.cpp  graphicsplugin_d3d12.cpp  graphicsplugin_factory.cpp  graphicsplugin_metal.cpp  graphicsplugin_opengl.cpp  graphicsplugin_opengles.cpp  graphicsplugin_vulkan.cpp  hello_xr.1  logger.cpp  logger.h  main.cpp  openxr_program.cpp  openxr_program.h  options.h  pch.cpp  pch.h  platformdata.h  platformplugin.h  platformplugin_android.cpp  platformplugin_factory.cpp  platformplugin_posix.cpp  platformplugin_win32.cpp  platformplugin_xlib.cpp  (+7 more)
src/tests/hello_xr/OpenGLES/release/: output-metadata.json
src/tests/hello_xr/Vulkan/release/: output-metadata.json
src/tests/hello_xr/android_resources/: helloxr-es-24px.svg.license  helloxr-vk-24px.svg.license
src/tests/hello_xr/android_resources/drawable/: ic_helloxr_es.xml  ic_helloxr_vk.xml
src/tests/hello_xr/android_resources/opengles/mipmap-anydpi-v26/: ic_helloxr_launcher.xml
src/tests/hello_xr/android_resources/values/: ic_helloxr_launcher_background.xml
src/tests/hello_xr/android_resources/vulkan/mipmap-anydpi-v26/: ic_helloxr_launcher.xml
src/tests/hello_xr/java/com/khronos/hello_xr/: MainActivity.java
src/tests/hello_xr/vulkan_shaders/: frag.glsl  frag.spv.license  vert.glsl  vert.spv.license
src/tests/list/: CMakeLists.txt  list.cpp  openxr_runtime_list.1
src/tests/list_json/: AndroidManifest.xml  CMakeLists.txt  build.gradle  list_json.cpp  openxr_runtime_list_json.1  settings.gradle
src/tests/loader_test/: AndroidManifest.xml  CMakeLists.txt  build.gradle  gradlew.bat.license  loader_test.cpp  loader_test_utils.cpp  loader_test_utils.hpp  settings.gradle
src/tests/loader_test/android_assets/openxr/1/api_layers/explicit.d/: XrApiLayer_api_dump.json  XrApiLayer_api_dump.json.license  XrApiLayer_core_validation.json  XrApiLayer_test.json  XrApiLayer_test_badjson_api_float.json  XrApiLayer_test_badjson_api_int.json  XrApiLayer_test_badjson_api_major_high.json  XrApiLayer_test_badjson_api_string.json  XrApiLayer_test_badjson_file_ver_all_low.json  XrApiLayer_test_badjson_file_ver_int.json  XrApiLayer_test_badjson_file_ver_major_high.json  XrApiLayer_test_badjson_file_ver_minor_high.json  XrApiLayer_test_badjson_file_ver_missing.json  XrApiLayer_test_badjson_file_ver_string.json  XrApiLayer_test_badjson_layer_empty.json  XrApiLayer_test_badjson_layer_missing.json  XrApiLayer_test_badjson_name_int.json  XrApiLayer_test_badjson_name_missing.json  XrApiLayer_test_badjson_path_int.json  XrApiLayer_test_badjson_path_int.json.license  XrApiLayer_test_badjson_path_missing.json  XrApiLayer_test_badjson_path_no_file.json  XrApiLayer_test_badjson_relative_path.json  XrApiLayer_test_badnegotiate_always.json  XrApiLayer_test_badnegotiate_always.json.license  XrApiLayer_test_badnegotiate_invalid_api.json  XrApiLayer_test_badnegotiate_invalid_gipa.json  XrApiLayer_test_badnegotiate_invalid_interface.json  XrApiLayer_test_good_relative_path.json
src/tests/loader_test/test_layers/: CMakeLists.txt  XrApiLayer_test.def  XrApiLayer_test.expsym  XrApiLayer_test.map  layer_test.cpp
src/tests/loader_test/test_runtimes/: CMakeLists.txt  runtime_test.cpp  test_runtime.def  test_runtime.expsym  test_runtime.map
src/tests/test_runtimes/: AndroidManifest.xml  CMakeLists.txt  build.gradle  org.khronos.openxr.runtime_broker_preferences.xml  runtime_test.cpp  test_runtime.def  test_runtime.expsym  test_runtime.map
tests/list/: CMakeLists.txt
(+364 files in other folders)
